# textwarden

./: .gitignore  .swiftlint.yml  ADD_LAUNCHATLOGIN_PACKAGE.md  AGENTS.md  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  FINAL_VALIDATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  Info.plist  LAUNCH_AT_LOGIN_MIGRATION.md  LICENSE  Makefile  QUICK_TEST_CHECKLIST.md  README.md  SETUP.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  TextWarden.entitlements  UserStatisticsTests.swift  VERIFICATION.md  XCODE_SETUP_VERIFICATION.md  appcast.xml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  claude-code-review.yml
Assets/textwarden_logo.icon/: icon.json
Docs/: Terminal-TextReplacement-Fix.md
Gnau.xcodeproj/: project.pbxproj
GrammarEngine/: .gitignore  Cargo.toml  build.rs  internet_abbreviations.txt
GrammarEngine/it_terminology_extraction/: .gitignore  IT_SOURCES.md  README.md
GrammarEngine/it_terminology_extraction/scripts/: extract_hyphenated_compounds.py  extract_nist_terms.py  regenerate_wordlist.sh  split_hyphens.sh
GrammarEngine/it_terminology_extraction/source/: cncf_technologies.txt  languages.txt  linux_bpf.txt  linux_filesystems.txt  linux_syscalls.txt  mdn_glossary.txt  nist_terms.txt  protocols.txt  security_terms.txt  services.txt  stackoverflow_survey.txt  stackoverflow_tags.txt  valid_hyphenated_compounds.txt
GrammarEngine/names_extraction/: README.md  SOURCES.md
GrammarEngine/slang_extraction/: README.md  SLANG_SOURCES.md
GrammarEngine/src/: analyzer.rs  bridge.rs  language_filter.rs  lib.rs  llm_types.rs  slang_dict.rs  swift_logger.rs
GrammarEngine/src/llm/: config.rs  context.rs  engine.rs  mod.rs  model_manager.rs  prompts.rs  sentence_detector.rs
GrammarEngine/wordlists/: brand_names.txt  genz_slang.txt  it_terminology.txt  last_names.txt  person_names.txt
Scripts/: analyze-slack-spacing.swift  build-rust.sh  debug-live.sh  help-template.html  inspect-slack-accessibility.swift  inspect-slack-hierarchy.swift  quick-test.sh  release.sh  run-and-watch.sh  test-grammar-engine.swift  test-reset.sh  test-slack-font.swift  test-text-measurement.swift
Sources/Accessibility/: ApplicationTracker.swift  BrowserURLExtractor.swift  CGWindowHelper.swift  PermissionManager.swift  TextMonitor.swift
Sources/App/: AIRephraseCache.swift  AnalysisCoordinator+GrammarAnalysis.swift  AnalysisCoordinator+StyleChecking.swift  AnalysisCoordinator+TextReplacement.swift  AnalysisCoordinator+WindowTracking.swift  AnalysisCoordinator.swift  CrashRecoveryManager.swift  Dependencies.swift  FoundationModelsEngine.swift  GnauApp.swift  MenuBarController.swift  PreferencesWindowController.swift  ReadabilityTipsCache.swift  StyleInstructions.swift  StyleTypes+Generable.swift  SuggestionTracker.swift  TextWardenApp.swift  UpdaterViewModel.swift  VirtualKeyCodes.swift
Sources/AppConfiguration/: AXCapabilityProfile.swift  AppBehavior.swift  AppBehaviorRegistry.swift  AppConfiguration.swift  AppRegistry.swift  BehaviorTypes.swift  MessengerBehavior.swift  StrategyProfileCache.swift  StrategyProfiler.swift  StrategyRecommendationEngine.swift  TimingConstants.swift  UIConstants.swift
Sources/ContentParsers/: BrowserContentParser.swift  ClaudeContentParser.swift  ContentParser.swift  ContentParserFactory.swift  GenericContentParser.swift  MailContentParser.swift  NotionContentParser.swift  OutlookContentParser.swift  PowerPointContentParser.swift  SlackContentParser.swift  TeamsContentParser.swift  TerminalContentParser.swift  WebExContentParser.swift  WordContentParser.swift
Sources/GrammarBridge/: Gnau-Bridging-Header.h  GrammarEngine.swift  GrammarEngineFFI.swift  GrammarError.swift  LLMEngine.swift  ModelManager.swift  PreferenceLearner.swift  StyleTypes.swift  Suggestion.swift  SwiftBridgeCore.swift  TextWarden-Bridging-Header.h  UnifiedSuggestion.swift  grammar-engine.h
Sources/Models/: ApplicationConfiguration.swift  ApplicationContext.swift  BuildInfo.swift  CustomVocabulary.swift  DiagnosticReport.swift  DismissalTracker.swift  IndicatorPositionStore.swift  (+12 more)
Tests/: test-grammar-engine.swift
TextWarden.xcodeproj/: project.pbxproj
TextWardenTests/: TextWardenTests.swift
docs/: FOUNDATION_MODELS.md
(+183 files in other folders)
