[package]
name = "grammar-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
harper-core = "1.1"
swift-bridge = "0.1.57"
uuid = { version = "1.0", features = ["v4"] }
whichlang = "0.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sysinfo = "0.37"

# LLM Style Checking dependencies
# Note: mistralrs requires git dependency as it's not published to crates.io
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs", features = ["metal"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time"], optional = true }
reqwest = { version = "0.12", features = ["stream"], optional = true }
futures-util = { version = "0.3", optional = true }
lazy_static = { version = "1.5", optional = true }
directories = "6.0"
similar = "2.6"  # For text diff computation
sha2 = "0.10"

[features]
default = []
llm = ["mistralrs", "tokio", "reqwest", "futures-util", "lazy_static"]

[build-dependencies]
swift-bridge-build = "0.1.57"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[lints.clippy]
# Default lints - use sensible defaults without pedantic for now
# Specific allows for FFI code and generated swift-bridge code
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_arguments = "allow"  # FFI functions need many parameters
unnecessary_cast = "allow"     # swift-bridge generates these
